# graphql-gateway-grpc-services

./: .gitignore  .meshrc.yaml  BUILD.bazel  DEPENDENCIES.bzl  Makefile  README.md  WORKSPACE  additional-resolvers.js  go.mod  go.sum  package-lock.json  package.json
kubernetes/definitions/: BUILD.bazel  container.jsonnet  deployment.jsonnet  microservice.jsonnet  service.jsonnet
models/products/: BUILD.bazel  product.proto
models/reviews/: BUILD.bazel  review.proto
services/products/: BUILD.bazel  main.go  server.go
services/reviews/: BUILD.bazel  main.go  server.go
