load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

package(default_visibility = ["//visibility:public"])

jsonnet_library(
    name = "deploy_lib",
    srcs = ["deployment.jsonnet"],
)

jsonnet_library(
    name = "service_lib",
    srcs = ["service.jsonnet"],
)

jsonnet_library(
    name = "container_lib",
    srcs = ["container.jsonnet"],
)

jsonnet_library(
    name = "microservice_lib",
    srcs = ["microservice.jsonnet"],
    deps = [
        "//kubernetes/definitions:container_lib",
        "//kubernetes/definitions:deploy_lib",
        "//kubernetes/definitions:service_lib",
    ],
)
