load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "products_proto",
    srcs = ["product.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "products_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/adfinitas-app/prometer/models/products",
    proto = ":products_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":products_go_proto"],
    importpath = "github.com/adfinitas-app/prometer/models/products",
    visibility = ["//visibility:public"],
)
