load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/adfinitas-app/prometer/services/reviews",
    visibility = ["//visibility:private"],
    deps = [
        "//models/reviews:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "reviews",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
